--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
+    "embla-carousel-autoplay": "^8.2.1",
+    "embla-carousel-react": "^8.2.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.438.0",
     "mongoose": "^8.5.3",
